# HandEyeCalib

./: .gitignore  CMakeLists.txt  install.sh  main.cpp  readme
examples/: CMakeLists.txt  board_pose.yml  cam_calib.cpp  camera_parameters.yml  eih_calib.cpp  eth_calib.cpp  robot_poses.yaml
examples/eih/: intrinsics.yml
samples/: CMakeLists.txt  cam_calib.cpp  eih_calib.cpp
source/: CMakeLists.txt  camera_intrinsics.cpp  camera_intrinsics.hpp  common.hpp  eye_in_hand.cpp  eye_in_hand.hpp  eye_to_hand.cpp  eye_to_hand.hpp  file_manip.cpp  file_manip.hpp
validations/: CMakeLists.txt  convert_pose.cpp  cv_yaml.cpp  eigen_test.cpp  location.txt  rot_vec.cpp
